Start refactoring all code